LU-5413 mdd: improve error handling around mdd_write_lock()

In mdd_unlink() avoid passing an NULL object to mdd_write_unlock(). In
mdd_migrate_update_name() and mdd_open() ensure that
mdd_write_unlock() is called in the error paths.

Signed-off-by: John L. Hammond <john.hammond@intel.com>
Change-Id: I12205f52d45138201a7e103d1b5effddbe865308
Reviewed-on: http://review.whamcloud.com/11228
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Fan Yong <fan.yong@intel.com>
Reviewed-by: Dmitry Eremin <dmitry.eremin@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>