lustre/mdd/mdd_object.c
@@ -1677,13 +1677,16 @@ static int mdd_open(const struct lu_env *env, struct md_object *obj,
 	mdd_write_lock(env, mdd_obj, MOR_TGT_CHILD);
 
 	rc = mdd_la_get(env, mdd_obj, attr, BYPASS_CAPA);
-	if (rc)
-		RETURN(rc);
+	if (rc != 0)
+		GOTO(out, rc);
 
 	rc = mdd_open_sanity_check(env, mdd_obj, attr, flags);
-	if (rc == 0)
-		mdd_obj->mod_count++;
+	if (rc != 0)
+		GOTO(out, rc);
 
+	mdd_obj->mod_count++;
+	EXIT;
+out:
 	mdd_write_unlock(env, mdd_obj);
 	return rc;
 }
